--- a/backend-api/src/main/resources/application.properties
+++ b/backend-api/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=backend-api
 spring.datasource.url=jdbc:mysql://localhost:3306/crud
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=12345678
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 
 
 spring.flyway.url=jdbc:mysql://localhost:3306/crud
 spring.flyway.user=root
-spring.flyway.password=
+spring.flyway.password=12345678
