--- a/spring-boot-3-jwt-security/src/main/resources/application.yaml
+++ b/spring-boot-3-jwt-security/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/spring_security
     username: root
-    password: 
+    password: 12345678
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
